--- a/backend-food-application/.env
+++ b/backend-food-application/.env
@@ -1,6 +1,6 @@
 MONGODB_URL = "mongodb+srv://amit:amit10@cluster0.easuags.mongodb.net/"
 PORT =  8000
 JWT_SECRET = "HARRYPUTTER"
-CLOUD_NAME = "dqgfmfsc3" ,
+CLOUDINARY_CLOUD_NAME = "dqgfmfsc3" ,
 CLOUDNIARY_API_KEY  = "526622998911477",
-CLOUDINARY_API_SECRET = 
+CLOUDINARY_API_SECRET = "WQQ1e571KsJq2p7nemUvi3v4kOY"
